# kfl

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yaml
.github/workflows/: rust.yaml  static.yaml  static.yml  tests.yaml  tests.yml
book/: introduction.md  tutorial.md
book/book/: 404.html  appendix.html  decode-encode.html  index.html  introduction.html  print.html  rationale.html  searchindex.js  searchindex.json  tutorial.html
book/book/appendix/: knuffel.html
book/src/: README.md  SUMMARY.md  decode-encode.md  errors.md  introduction.md  rationale.md
book/src/appendix/: knuffel.md
crates/glif/: README.md
crates/mlir/: README.md
crates/mlir/examples/: ch1.kdl
crates/plist/: Cargo.toml
crates/plist/src/: lib.rs
crates/qif/: README.md
derive/: Cargo.toml  README.md  derive_decode.md  derive_decode_scalar.md
derive/src/: definition.rs  kw.rs  lib.rs  new_type.rs  node.rs  reflect.rs  scalar.rs  scaler.rs  variants.rs
derive/tests/: ast.rs  common.rs  encode.rs  encode_flatten.rs  encode_scalar.rs  encode_tuples.rs  encode_types.rs  flatten.rs  normal.rs  scalar.rs  tuples.rs  types.rs  unwrap.rs
derive/tests/common/: mod.rs
derive/tests/encode/: normal.rs
examples/: simple.rs
geo/src/: lib.rs
libs/geo/: README.md
libs/plist/: Cargo.toml  README.md
libs/rustc/: Cargo.toml  README.md
libs/rustc/src/: ast.rs  lib.rs
libs/rustc/src/ast/: ast.rs  node_id.rs
plist/src/: lib.rs
plugin/: Cargo.toml  README.md
repr/: Cargo.toml  README.md
repr/book/src/: str-and-char.md
repr/experiments/: python.rs  rfc3987.rs
repr/src/: ascii.rs  char.rs  consts.rs  conversions.rs  convert.rs  escape.rs  interval.rs  lib.rs  literal.rs  macros.rs  operators.rs  overload.rs  pat.rs  pattern.rs  repr.rs  unicode.rs  wrappers.rs
repr/src/classes/: ascii.rs  literal.rs  perl.rs  unicode.rs
src/: ast.rs  box.rs  containers.rs  context.rs  convert.rs  convert_ast.rs  decode.rs  errors.rs  grammar.rs  lib.rs  own.rs  print.rs  query.rs  scalars.rs  span.rs  traits.rs  wrappers.rs
src/convert/: containers.rs  scalars.rs
tests/: ast.rs  encode_scalar.rs  encode_types.rs  tuples.rs  types.rs  unwrap.rs
unconst/: Cargo.toml  README.md
unconst/src/: lib.rs
