[workspace]
members = [
    ".",
    "derive",
#    "crates/plist"
]

[package]
name = "kfl"
version = "0.0.16"
edition = "2021"
description = "Another KDL language implementation"
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration", "parser"]
categories = ["parser-implementations", "config", "encoding"]
homepage = "https://github.com/synthet-ic/kfl"
documentation = "https://docs.rs/kfl"
rust-version = "1.62.0"
readme = "README.md"

[dependencies]
base64 = { version = "0.21", optional = true }
chrono = { version = "0.4", optional = true }
#chumsky = { version = "0.8", default-features = false }
chumsky = { git = "https://github.com/zesterer/chumsky", branch = "zero-copy" }
kfl-derive = { path = "./derive", version = "0", optional = true }
miette = "5"
minicbor = { version = "0.19", optional = true, features = ["std", "derive"] }
thiserror = "1"
unicode-width = { version = "0.1", optional = true }

[dev-dependencies]
miette = { version = "5", features = ["fancy"] }
assert-json-diff = "2"
serde_json = "1"

[features]
default = ["derive", "base64", "line-numbers"]
derive = ["kfl-derive"]
line-numbers = ["unicode-width"]
