[workspace]
members = [".", "derive"]

[package]
name = "kfl"
version = "0.0.17"
edition = "2021"
description = "Another KDL language implementation"
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration", "parser"]
categories = ["parsing", "parser-implementations", "config", "encoding"]
homepage = "https://github.com/synthet-ic/kfl"
documentation = "https://docs.rs/kfl"
rust-version = "1.62.0"
readme = "README.md"

[dependencies]
base64 = { version = "0.21", optional = true }
chrono = { version = "0.4", optional = true }
http = { version = "0.2", optional = true }
kfl-derive = { path = "./derive", version = "0", optional = true }
log = "*"
miette = "5"
minicbor = { version = "0.19", optional = true, features = ["std", "derive"] }
repr = "0"
thiserror = "1"
unicode-width = { version = "0.1", optional = true }

[dev-dependencies]
miette = { version = "5", features = ["fancy"] }
assert-json-diff = "2"
serde_json = "1"

[features]
default = ["std", "derive", "base64", "line-numbers"]
derive = ["kfl-derive"]
line-numbers = ["unicode-width"]
std = []

# [[bin]]
# name = "out"
# path = "src/out.rs"
