[package]
name = "kfl-derive"
version = "0.1.0"
edition = "2021"
description = "A derive implementation for kfl KDL parser"
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration"]
homepage = "https://github.com/synthet-ic/kfl"
documentation = "https://docs.rs/kfl"
readme = "README.md"

[lib]
proc_macro = true

[dependencies]
heck = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
quote = "*"
proc-macro2 = "*"
proc-macro-error = "*"

[dev-dependencies]
kfl = { path = ".." }
miette = { version = "*", features = ["fancy"] }
