[package]
name = "kfl-derive"
version = "0.0.15"
edition = "2021"
description = "A derive implementation for kfl KDL parser"
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration"]
homepage = "https://github.com/synthet-ic/kfl"
documentation = "https://docs.rs/kfl-derive"
readme = "README.md"

[lib]
proc_macro = true

[dependencies]
heck = "0.4"
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"

[dev-dependencies]
kfl = { path = ".." }
miette = { version = "5", features = ["fancy"] }
