[package]
name = "kfl-plist"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
kfl = { path = "../..", version = "0", features = ["default", "chrono"] }

